docs: update swagger for enhanced match report
